<resources>
    <string name="WifiTip">You are recommended to download it when Wi-Fi is available</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">MU: Dragon Havoc</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appsf_dev_key">2Wk4MCq2hGXfQhjXpz6Tt3</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_line_login">Log in with LINE</string>
    <string name="change_language_tip">Modifying the game language requires restarting the application.</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="res_0x7f0f0027_com_google_firebase_crashlytics_mapping_file_id">00000000000000000000000000000000</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="config_file_no_exit">未找到对应的配置文件路径不存在</string>
    <string name="confirm">Confirm</string>
    <string name="default_filedownloader_notification_content">FileDownloader is running.</string>
    <string name="default_filedownloader_notification_title">FileDownloader</string>
    <string name="default_web_client_id">849924042620-st0v4htirn62vme6v9qc37hchh1l75cu.apps.googleusercontent.com</string>
    <string name="dllInfo_network">Resource loading abnormal. Reconnect now?</string>
    <string name="dll_update_tip">New version detected\nUpdate now</string>
    <string name="download">Download</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_iodata">Data loading error</string>
    <string name="error_network">Loading error. Please check your network and restart the game</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fb_senderid">849924042620</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="game_view_content_description">Game view</string>
    <string name="gcm_defaultSenderId">849924042620</string>
    <string name="google_api_key">AIzaSyCJMPxgRh8wYWND_9E5W7YQXfCF_s-Pf6U</string>
    <string name="google_app_id">1:849924042620:android:859879d9ee5fbe3b08bef9</string>
    <string name="google_crash_reporting_api_key">AIzaSyCJMPxgRh8wYWND_9E5W7YQXfCF_s-Pf6U</string>
    <string name="google_pay_error">Something went wrong. Please check network connection or google service account.</string>
    <string name="google_storage_bucket">ldsdk-3856f.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="kefu_qq_tip">Customer Service QQ: \n(Working hours: 7*24h)</string>
    <string name="ld_account_edit_name">Nickname </string>
    <string name="ld_account_edit_save">Save</string>
    <string name="ld_account_edit_text">Edit</string>
    <string name="ld_account_edit_title">Edit information</string>
    <string name="ld_account_loading_text">Logging in...</string>
    <string name="ld_account_text">Account</string>
    <string name="ld_agree_text">Agree</string>
    <string name="ld_agreement_hint_text">Terms of Service and Privacy Policy</string>
    <string name="ld_already_bound_text">Bound</string>
    <string name="ld_already_use_text">Used</string>
    <string name="ld_app_no_install_text">Please install %s first</string>
    <string name="ld_available_coupon_text">Coupons available</string>
    <string name="ld_awaiting_pay_text">Pending for payment</string>
    <string name="ld_balance_text">Balance:</string>
    <string name="ld_bind_email_text">Bind Email</string>
    <string name="ld_bind_success_text">Account bound</string>
    <string name="ld_binding_email_text">Binding...</string>
    <string name="ld_bit_balance">Balance</string>
    <string name="ld_bit_balance_hint_text">Insufficient LD Coin balance, please top-up first</string>
    <string name="ld_bit_balance_text">Insufficient LD Coin balance</string>
    <string name="ld_bit_payment_text">LD Coin balance</string>
    <string name="ld_coin_insufficient_text">Insufficient wallet balance, please top up</string>
    <string name="ld_coin_text">LD Coin</string>
    <string name="ld_commodity_name_text">Product name</string>
    <string name="ld_commodity_price_text">Price</string>
    <string name="ld_commodity_text">Product</string>
    <string name="ld_determine_text">Confirm</string>
    <string name="ld_disagree_text">Disagree</string>
    <string name="ld_experience_game_ago_hint_text" formatted="false">Please read and agree to %1 Terms of Service %1 and %2 Privacy Policy %2</string>
    <string name="ld_get_text">Send</string>
    <string name="ld_input_code_text">Enter your verification code</string>
    <string name="ld_input_email_text">Enter your email</string>
    <string name="ld_input_new_password_text">Enter new password</string>
    <string name="ld_input_password_text">Enter password</string>
    <string name="ld_login_bind">Bind</string>
    <string name="ld_login_bind_email_text">Bind email account</string>
    <string name="ld_login_bind_message">It\'s highly recommended to bind your account to an email for better experience</string>
    <string name="ld_once_more_input_new_password_text">Enter new password again</string>
    <string name="ld_register_text">Register</string>
    <string name="ld_reset_password_text">Reset password</string>
</resources>