<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="@dimen/ld_dp_40"
        android:paddingRight="@dimen/ld_dp_40"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/ld_dp_20">
        <TextView
            android:textSize="@dimen/ld_sp_13"
            android:textColor="#5b5b5b"
            android:id="@+id/step_desc"
            android:paddingBottom="@dimen/ld_dp_20"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.p008ld.sdk.widget.MyEditText
            android:id="@+id/email_et"
            android:hint="@string/ld_input_email_text"
            android:imeOptions="flagNoExtractUi"
            style="@style/ld_dialog_edittext"/>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ld_dp_10"
            android:layout_centerVertical="true">
            <com.p008ld.sdk.widget.MyEditText
                android:id="@+id/email_code_et"
                android:hint="@string/ld_input_code_text"
                android:imeOptions="flagNoExtractUi"
                style="@style/ld_dialog_edittext"/>
            <com.p008ld.sdk.widget.CountdownView
                android:textSize="@dimen/ld_sp_11"
                android:textColor="#499dff"
                android:id="@+id/email_get_code_tv"
                android:padding="@dimen/ld_dp_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/ld_dp_10"
                android:text="@string/ld_get_text"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <Button
            android:id="@+id/bind_btn"
            android:background="@drawable/ld_org_btn_selector"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/ld_dp_10"
            android:text="@string/ld_determine_text"
            style="@style/ld_dialog_base_button"/>
    </LinearLayout>
</FrameLayout>
