<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/forget_password_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/ld_dialog_base_bg"
        android:layout_width="@dimen/ld_base_dialog_width"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/ld_sp_15"
                android:textStyle="bold"
                android:textColor="#666666"
                android:gravity="center"
                android:id="@+id/title_tv"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/ld_dp_13"
                android:text="@string/ld_login_bind_email_text"
                android:layout_weight="1"
                style="@style/default_TextView"/>
            <ImageView
                android:id="@+id/iv_close"
                android:padding="@dimen/ld_dp_5"
                android:layout_width="@dimen/ld_dp_27"
                android:layout_height="@dimen/ld_dp_27"
                android:layout_marginTop="@dimen/ld_dp_8"
                android:src="@drawable/ld_dialog_close_img"/>
        </LinearLayout>
        <TextView
            android:textSize="@dimen/ld_sp_12"
            android:textColor="#999999"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ld_dp_20"
            android:layout_marginTop="@dimen/ld_dp_9"
            android:layout_marginRight="@dimen/ld_dp_20"
            android:text="@string/ld_login_bind_message"
            android:layout_marginHorizontal="@dimen/ld_dp_20"/>
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/ld_base_dialog_padding"
            android:paddingRight="@dimen/ld_base_dialog_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/ld_dp_15">
            <com.p008ld.sdk.widget.MyEditText
                android:id="@+id/mailbox_et"
                android:hint="@string/ld_input_email_text"
                android:imeOptions="flagNoExtractUi"
                style="@style/ld_dialog_edittext"/>
            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ld_dp_5">
                <com.p008ld.sdk.widget.MyEditText
                    android:id="@+id/mailbox_code_et"
                    android:hint="@string/ld_input_code_text"
                    android:imeOptions="flagNoExtractUi"
                    style="@style/ld_dialog_edittext"/>
                <com.p008ld.sdk.widget.CountdownView
                    android:textSize="@dimen/ld_sp_11"
                    android:textColor="#499dff"
                    android:id="@+id/get_code_tv"
                    android:padding="@dimen/ld_dp_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/ld_dp_10"
                    android:text="@string/ld_get_text"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ld_dp_5">
                <com.p008ld.sdk.widget.MyEditText
                    android:id="@+id/edit_pwd"
                    android:hint="@string/ld_input_password_text"
                    android:inputType="textPassword"
                    android:imeOptions="flagNoExtractUi"
                    style="@style/ld_dialog_edittext"/>
                <ImageView
                    android:id="@+id/see_pwd_img"
                    android:padding="@dimen/ld_dp_8"
                    android:visibility="invisible"
                    android:layout_width="@dimen/ld_dp_30"
                    android:layout_height="@dimen/ld_dp_30"
                    android:layout_marginRight="@dimen/ld_dp_6"
                    android:src="@drawable/ld_org_see_pwd_selector"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <Button
                android:enabled="false"
                android:id="@+id/btn_bind"
                android:layout_marginTop="@dimen/ld_base_dialog_edittext_top"
                android:layout_marginBottom="@dimen/ld_dp_20"
                android:text="@string/ld_login_bind"
                style="@style/ld_dialog_base_button"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
