<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/ld_dialog_base_bg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/ld_dp_15"
        android:layout_width="@dimen/ld_base_dialog_width"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#666666"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ld_agreement_hint_text"/>
        <TextView
            android:textSize="12sp"
            android:textColor="#666666"
            android:gravity="center"
            android:id="@+id/tips_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/ld_experience_game_ago_hint_text"
            android:lineSpacingExtra="@dimen/ld_dp_6"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">
            <Button
                android:textSize="@dimen/ld_sp_11"
                android:textColor="#000000"
                android:gravity="center"
                android:id="@+id/confirm_btn"
                android:background="@drawable/ld_org_btn_selector"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/ld_agree_text"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/ld_dp_11"/>
            <Button
                android:textSize="@dimen/ld_sp_11"
                android:textColor="#80000000"
                android:gravity="center"
                android:id="@+id/cancel_btn"
                android:background="@drawable/ld_coupon_bg"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/ld_disagree_text"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_gravity="end"
        android:id="@+id/iv_close"
        android:padding="@dimen/ld_dp_5"
        android:layout_width="@dimen/ld_dp_27"
        android:layout_height="@dimen/ld_dp_27"
        android:layout_marginTop="@dimen/ld_dp_5"
        android:src="@drawable/ld_dialog_close_img"
        android:layout_marginEnd="@dimen/ld_dp_3"/>
</FrameLayout>
