<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/ld_dialog_base_bg"
        android:layout_width="@dimen/ld_base_dialog_width"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ld_dp_48"
            android:paddingStart="@dimen/ld_dp_7">
            <ImageView
                android:id="@+id/back_login"
                android:padding="@dimen/ld_dp_5"
                android:layout_width="@dimen/ld_dp_26"
                android:layout_height="@dimen/ld_dp_26"
                android:src="@drawable/ld_top_back_icon"
                android:layout_centerVertical="true"/>
            <TextView
                android:textSize="@dimen/ld_sp_15"
                android:textStyle="bold"
                android:textColor="#666666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ld_register_text"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/ld_base_dialog_padding"
            android:paddingRight="@dimen/ld_base_dialog_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.p008ld.sdk.widget.MyEditText
                android:id="@+id/register_email_et"
                android:hint="@string/ld_input_email_text"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_@."
                android:imeOptions="flagNoExtractUi"
                style="@style/ld_dialog_edittext"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ld_base_dialog_edittext_top">
                <com.p008ld.sdk.widget.MyEditText
                    android:id="@+id/email_code_et"
                    android:hint="@string/ld_input_code_text"
                    android:imeOptions="flagNoExtractUi"
                    style="@style/ld_dialog_edittext"/>
                <com.p008ld.sdk.widget.CountdownView
                    android:textSize="@dimen/ld_sp_11"
                    android:textColor="#499dff"
                    android:id="@+id/reg_get_code"
                    android:padding="@dimen/ld_dp_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/ld_dp_10"
                    android:text="@string/ld_get_text"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ld_base_dialog_edittext_top">
                <com.p008ld.sdk.widget.MyEditText
                    android:id="@+id/password_et"
                    android:hint="@string/ld_input_new_password_text"
                    android:inputType="textPassword"
                    android:imeOptions="flagNoExtractUi"
                    style="@style/ld_dialog_edittext"/>
                <ImageView
                    android:id="@+id/see_pwd_img1"
                    android:padding="@dimen/ld_dp_8"
                    android:visibility="invisible"
                    android:layout_width="@dimen/ld_dp_30"
                    android:layout_height="@dimen/ld_dp_30"
                    android:layout_marginRight="@dimen/ld_dp_6"
                    android:src="@drawable/ld_org_see_pwd_selector"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <Button
                android:id="@+id/register_account_register"
                android:background="@drawable/ld_org_btn_selector"
                android:layout_marginTop="@dimen/ld_base_dialog_edittext_top"
                android:layout_marginBottom="@dimen/ld_dp_20"
                android:text="@string/ld_determine_text"
                style="@style/ld_dialog_base_button"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
