<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ld_dp_20"
        android:paddingStart="@dimen/ld_dp_40"
        android:paddingEnd="@dimen/ld_dp_40">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.p008ld.sdk.widget.MyEditText
                android:id="@+id/mailbox_et"
                android:hint="@string/ld_input_email_text"
                android:imeOptions="flagNoExtractUi"
                style="@style/ld_dialog_edittext"/>
            <ImageView
                android:id="@+id/account_select_img"
                android:padding="@dimen/ld_dp_8"
                android:visibility="invisible"
                android:layout_width="@dimen/ld_dp_30"
                android:layout_height="@dimen/ld_dp_30"
                android:layout_marginRight="@dimen/ld_dp_6"
                android:src="@drawable/ld_login_register_arrow_down"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ld_base_dialog_edittext_top">
            <com.p008ld.sdk.widget.MyEditText
                android:id="@+id/mailbox_code_et"
                android:hint="@string/ld_input_code_text"
                android:imeOptions="flagNoExtractUi"
                style="@style/ld_dialog_edittext"/>
            <com.p008ld.sdk.widget.CountdownView
                android:textSize="@dimen/ld_sp_11"
                android:textColor="#499dff"
                android:id="@+id/get_code_tv"
                android:padding="@dimen/ld_dp_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/ld_dp_10"
                android:text="@string/ld_get_text"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ld_base_dialog_edittext_top">
            <com.p008ld.sdk.widget.MyEditText
                android:id="@+id/input_new_password"
                android:hint="@string/ld_input_new_password_text"
                android:inputType="textPassword"
                android:imeOptions="flagNoExtractUi"
                style="@style/ld_dialog_edittext"/>
            <ImageView
                android:id="@+id/see_pwd_img"
                android:padding="@dimen/ld_dp_8"
                android:visibility="invisible"
                android:layout_width="@dimen/ld_dp_30"
                android:layout_height="@dimen/ld_dp_30"
                android:layout_marginRight="@dimen/ld_dp_6"
                android:src="@drawable/ld_org_see_pwd_selector"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ld_base_dialog_edittext_top">
            <com.p008ld.sdk.widget.MyEditText
                android:id="@+id/once_more_input_new_password"
                android:hint="@string/ld_once_more_input_new_password_text"
                android:inputType="textPassword"
                android:imeOptions="flagNoExtractUi"
                style="@style/ld_dialog_edittext"/>
            <ImageView
                android:id="@+id/see_pwd_img1"
                android:padding="@dimen/ld_dp_8"
                android:visibility="invisible"
                android:layout_width="@dimen/ld_dp_30"
                android:layout_height="@dimen/ld_dp_30"
                android:layout_marginRight="@dimen/ld_dp_6"
                android:src="@drawable/ld_org_see_pwd_selector"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <Button
            android:enabled="false"
            android:id="@+id/forget_phone_password"
            android:layout_marginTop="@dimen/ld_base_dialog_edittext_top"
            android:layout_marginBottom="@dimen/ld_dp_20"
            android:text="@string/ld_reset_password_text"
            style="@style/ld_dialog_base_button"/>
    </LinearLayout>
</FrameLayout>
